[package]
name = "loago"
version = "0.1.0"
edition = "2021"
authors = ["Axlefublr"]
license = "MIT"
description = "Track how long ago you last did a task"
readme = "README.md"
homepage = "https://github.com/Axlefublr/loago"
repository = "https://github.com/Axlefublr/loago"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
