[package]
name = "loago"
version = "0.3.0"
edition = "2021"
authors = ["Axlefublr"]
license = "MIT"
description = "Track how long ago you last did a task"
readme = "README.md"
homepage = "https://github.com/Axlefublr/loago"
repository = "https://github.com/Axlefublr/loago"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["wrap_help", "derive"] }
dirs = "5.0.1"
serde_json = "1.0.108"
